--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -5,14 +5,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Ubuntu', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
+  font-size: 1em;
 }
 
 :root{
-  --corDestaque: #aeff00;
+  --corDestaque: #00FFFF;
   --corFonteBtn: #000;
-  --corFundo: #01011E;
+  --corFundo: #131313;
   --corFonte: #ffffff;
   --corSecundaria: #0d3d00;
   --fontTitle: 'Reem Kufi Fun', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
