--- a/app/templates/treino-redacao.html
+++ b/app/templates/treino-redacao.html
@@ -28,7 +28,7 @@
 <div class="container">
   <h3>Corretor de Redação</h3>
   {% if not session["user"] %}
-  <span class="alert">Você precisa ter uma conta para usar este recurso! <a href="/cadastro">clique aqui para se cadastrar</a></span>
+  <span class="alert">Você precisa ter uma conta para usar este recurso! <a href="/cadastro">clique aqui para se cadastrar</a> ou, se já tem uma conta <a href='/login'>clique aqui para entrar.</a></span>
   {% endif %}
   
   <div class="form">
