novo corretor de redacoes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -113,7 +113,7 @@
   <div class="mapa-btn">
     <button onclick="window.location.href='/feed/duvidas'"><span>Fórum de Dúvidas</span></button>
     <button onclick="window.location.href='/feed/artigos'"><span>Feed de Artigos</span></button>
-    <button onclick="window.location.href='/avaliar-redacao'"><span>Corretor de Redação</span></button>
+    <button onclick="window.location.href='/redacao'"><span>Corretor de Redação</span></button>
     <button onclick="window.location.href='/session'"><span>Sessão de Estudos</span></button>
     <button onclick="window.location.href='/feciba-mostra'"><span>Projetos FECIBA</span></button>
   </div>
