--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <script type="text/javascript">
       (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -8,7 +9,7 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "jhgb83crkv");
     </script>
-  
+  <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}" type="image/png">
 
 <meta name="google-site-verification" content="v6NiONjH3eadLLRS1gTIK-PYOJgGygwT5tNjxB27UTY" />
 
