--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -114,7 +114,11 @@
     <button onclick="window.location.href='/feciba-mostra'"><span>Projetos FECIBA</span></button>
   </div>
 </div>
-
+<div class="container">
+  <section onclick="window.location.href='https://forms.gle/XS5zAjqE27jAqdDWA'">
+    <img src="{{url_for('static', filename='img/ads-form.png')}}" alt="Anúncio">
+  </section>
+</div>
 <div class="container">
 
   <p>Explore os mais recentes conteúdos do LearnLoop!</p>
