--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -11,9 +11,9 @@
 }
 
 :root{
-  --corDestaque: #00FFFF;
+  --corDestaque: #7FFD00;
   --corFonteBtn: #000;
-  --corFundo: #131313;
+  --corFundo: #04032D;
   --corFonte: #ffffff;
   --corSecundaria: #0d3d00;
   --fontTitle: 'Reem Kufi Fun', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
