tirar botoes desnecessário no corretor

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -104,9 +104,17 @@
 </div>
 
 <div class="container">
-  <h3><span id="username-placeholder"></span></h3>
+  <h3>
+   <!--<span id="username-placeholder"></span> -->
+   Olá, Estudante!
+  </h3>
   <h3>O que você quer fazer agora?</h3>
   <div class="mapa-btn">
+
+    
+
+
+
     <button onclick="window.location.href='/feed/duvidas'"><span>Fórum de Dúvidas</span></button>
     <button onclick="window.location.href='/feed/artigos'"><span>Feed de Artigos</span></button>
     <button onclick="window.location.href='/redacao'"><span>Corretor de Redação</span></button>
