--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,11 +1,11 @@
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&family=Reem+Kufi+Fun:wght@400;600;700&family=Roboto:wght@300;400;500&family=Ubuntu:wght@400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 1em;
 }
@@ -59,7 +59,7 @@ button{
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-weight: 700;
+  font-weight: 900;
 }
 
 header span{
@@ -92,6 +92,7 @@ nav a span{
 
 .container h3{
   font-size: 2em;
+  font-weight: 700;
 }
 
 .infos, form{
