--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -13,7 +13,7 @@
 :root{
   --corDestaque: #7FFD00;
   --corFonteBtn: #000;
-  --corFundo: #04032D;
+  --corFundo: #000;
   --corFonte: #ffffff;
   --corSecundaria: #0d3d00;
   --fontTitle: 'Reem Kufi Fun', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
