--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -59,7 +59,7 @@ button{
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-weight: 900;
+  font-weight: 800;
 }
 
 header span{
@@ -93,6 +93,7 @@ nav a span{
 .container h3{
   font-size: 2em;
   font-weight: 700;
+  line-height: 0.9em;
 }
 
 .infos, form{
