Volta do processamento de imagens

--- a/app/templates/treino-redacao.html
+++ b/app/templates/treino-redacao.html
@@ -44,7 +44,7 @@
     <textarea id="conteudo" placeholder="Digite sua redação"></textarea>
   </div>
   <button onclick="redacao()">Enviar</button>
-  <!-- <button onclick="carregarFoto()">Carregar Foto do Caderno</button> -->
+  <button onclick="carregarFoto()">Carregar Foto do Caderno</button> 
 </div>
 
 
