--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -33,7 +33,8 @@
 <article class="container">
   <h1>{{artigo.titulo}}</h1>
   <small>Criado por: {{autor.username}}</small>
-
+  <small style="margin-top: -0.7em;"><strong>Visualizações:</strong> {{artigo.views}}</small>
+<!--
   <div class="container">
   <section> 
     <a href="https://instagram.com/ogustavo.developer">
@@ -41,6 +42,7 @@
     </a>
   </section> 
   </div>
+-->
 <!--
   <ins
 	class="adupeex"
