--- a/app/templates/treino-redacao.html
+++ b/app/templates/treino-redacao.html
@@ -34,7 +34,7 @@
   {% endif %}
   
   <div class="form">
-    <input id="tema" type="text" placeholder="Digite o tema da sua redação">
+    <input id="tema" type="text" placeholder="Digite o tema da sua redação (obrigatório)">
     <input id="titulo" type="text" placeholder="Digite o título de sua redação">
 <label for="nivel">Selecione o nível de ensino:</label>
   <select id="nivel">
@@ -43,7 +43,7 @@
     <option value="2° ano Ensino Médio">2° Ano do Ensino Médio</option>
     <option value="3° ano Ensino Médio" selected>3° Ano do Ensino Médio</option>
   </select>
-    <textarea id="conteudo" placeholder="Digite sua redação"></textarea>
+    <textarea id="conteudo" placeholder="Digite sua redação (obrigatório)"></textarea>
   </div>
   <button onclick="redacao()">Enviar para Correção</button>
   <button onclick="carregarFoto()">Digitalizar Redação Manuscrita</button> 
