Novidade: Redação Guiada

--- a/app/templates/treino-redacao.html
+++ b/app/templates/treino-redacao.html
@@ -46,6 +46,9 @@
   </select>
     <textarea id="conteudo" placeholder="Digite sua redação (obrigatório)"></textarea>
   </div>
+
+  <button onclick="redacaoGuiada()">Redação Guiada</button>
+  
   <button onclick="redacao()">Enviar para Correção</button>
   <button onclick="carregarFoto()">Digitalizar Redação Manuscrita</button> 
 </div>
