--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,7 +50,7 @@
   </head>
   <body class='dark-mode'>
     <header>
-      <span>LearnLoop</span>
+      <span>Estudaê</span>
       <nav>
         <a href="/">
           <span class="material-symbols-outlined">home</span>
@@ -88,6 +88,12 @@
     {% block content %}
 
     {% endblock %}
+
+    <footer>
+      <p>&copy; 2025 Estudaê. Todos os direitos reservados.</p>
+      <p><a href="/politica-de-privacidade">Política de Privacidade</a> | <a href="/termos-de-uso">Termos de Uso</a></p>
+    </footer>
+
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
