--- a/app/templates/privacidade.html
+++ b/app/templates/privacidade.html
@@ -10,20 +10,21 @@
 {% block content %}
 <div class="container">
   <h1>Política de Privacidade</h1>
-  <p>Esta Política de Privacidade descreve como o LearnLoop coleta, usa e protege suas informações pessoais quando você utiliza nosso site e serviços.</p>
 
-  <p><strong>Informações que Coletamos:</strong> Coletamos informações de cadastro, como nome e e-mail, além de dados de uso e informações técnicas, como endereço IP e tipo de navegador.</p>
+  <p><strong>Art. 1º</strong> - Esta Política de Privacidade descreve como o LearnLoop coleta, usa e protege suas informações pessoais ao utilizar nosso site e serviços.</p>
 
-  <p><strong>Como Utilizamos Suas Informações:</strong> Utilizamos suas informações para melhorar a experiência do usuário, personalizar o conteúdo e enviar comunicações relacionadas aos nossos serviços.</p>
+  <p><strong>Art. 2º</strong> - Coletamos informações de cadastro, como nome e e-mail, bem como dados de uso e informações técnicas, incluindo endereço IP e tipo de navegador.</p>
 
-  <p><strong>Compartilhamento de Informações:</strong> Não compartilhamos suas informações pessoais com terceiros, exceto quando exigido por lei.</p>
+  <p><strong>Art. 3º</strong> - As informações coletadas são utilizadas para aprimorar a experiência do usuário, personalizar conteúdos e enviar comunicações relacionadas aos serviços do LearnLoop.</p>
 
-  <p><strong>Segurança de Dados:</strong> Protegemos suas informações com medidas técnicas e administrativas adequadas para evitar acessos não autorizados.</p>
+  <p><strong>Art. 4º</strong> - Não compartilhamos suas informações pessoais com terceiros, salvo quando exigido por lei ou mediante seu consentimento expresso.</p>
 
-  <p><strong>Seus Direitos:</strong> Você pode acessar, corrigir ou excluir suas informações pessoais a qualquer momento. Para isso, entre em contato pelo e-mail: <a href="mailto:learnloopdigital@gmail.com">learnloopdigital@gmail.com</a>.</p>
+  <p><strong>Art. 5º</strong> - Implementamos medidas técnicas e administrativas adequadas para proteger suas informações contra acessos não autorizados.</p>
 
-  <p><strong>Alterações na Política:</strong> Podemos alterar esta Política de Privacidade a qualquer momento. Notificaremos sobre mudanças através do site.</p>
+  <p><strong>Art. 6º</strong> - Você tem o direito de acessar, corrigir ou excluir suas informações pessoais a qualquer momento. Para isso, entre em contato pelo e-mail: <a href="mailto:learnloopdigital@gmail.com">learnloopdigital@gmail.com</a>.</p>
 
-  <p><strong>Contato:</strong> Em caso de dúvidas sobre esta política, entre em contato conosco pelo e-mail: <a href="mailto:learnloopdigital@gmail.com">learnloopdigital@gmail.com</a>.</p>
+  <p><strong>Art. 7º</strong> - Esta Política de Privacidade pode ser alterada a qualquer momento, sendo as modificações comunicadas através do site.</p>
+
+  <p><strong>Art. 8º</strong> - Para quaisquer dúvidas sobre esta política, entre em contato pelo e-mail: <a href="mailto:learnloopdigital@gmail.com">learnloopdigital@gmail.com</a>.</p>
 </div>
 {% endblock %}
