--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -7,6 +7,7 @@
   <h3>Cadastre-se na plataforma</h3>
   <form action="/api/signup" method="POST">
     <input type="text" placeholder="Digite o seu nome de usuário" name="username">
+    <input type="email" placeholder="Digite seu e-mail" name="email">
     <input type="password" placeholder='Digite sua senha' name="password">
     <button type="submit">Cadastrar</button>
   </form>
