--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -20,7 +20,7 @@
 
   .container h1 {
     line-height: 0.9em;
-    
+    font-size: 1.8em;
   }
 
   li {
@@ -56,6 +56,7 @@
 </script>-->
   <div id="conteudo">
     <p>{{artigo.texto | safe}}</p>
+    <p><strong>Ficou com dúvida? Clique no botão "Tirar Dúvida" e tenha resposta instantânea </strong></p>
   </div>
 
   <div class="btns">
