--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -91,7 +91,7 @@
 
     <footer>
       <p>&copy; 2025 Estudaê. Todos os direitos reservados.</p>
-      <p><a href="/politica-de-privacidade">Política de Privacidade</a> | <a href="/termos-de-uso">Termos de Uso</a></p>
+      <p><a href="/politica-de-privacidade">Política de Privacidade</a> | <a href="/termos-de-uso">Termos de Uso</a> | <a href="sobre">Sobre</a></p>
     </footer>
 
     <script>
