--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,9 @@
 
   gtag('config', 'G-BX1W7ZDH2L');
 </script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2345353716426198"
+     crossorigin="anonymous"></script>
     
    <title>{% block title %}{% endblock %}</title>
   
