troca de textos

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}LearnLoop | Página Inicial{% endblock %}
+{% block title %}Estudaê | Página Inicial{% endblock %}
 
 {% block metas %}
-<meta name="description" content="A LearnLoop é uma plataforma de estudos impulsionada pela Inteligência Artificial, criada para transformar a educação no Brasil. Junte-se à nossa revolução educacional!">
+<meta name="description" content="O Estudaê é uma plataforma de estudos impulsionada pela Inteligência Artificial, criada para transformar a educação no Brasil. Junte-se à nossa revolução educacional!">
 <meta name="keywords" content="plataforma de estudos, inteligência artificial, aprendizado online, recursos educacionais">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2345353716426198"
      crossorigin="anonymous"></script>
