--- a/app/templates/privacidade.html
+++ b/app/templates/privacidade.html
@@ -11,7 +11,7 @@
 <div class="container">
   <h1>Política de Privacidade</h1>
 
-  <p><strong>Art. 1º</strong> - Esta Política de Privacidade descreve como o LearnLoop coleta, usa e protege suas informações pessoais ao utilizar nosso site e serviços.</p>
+  <p><strong>Art. 1º</strong> - Esta Política de Privacidade descreve como o Estudaê coleta, usa e protege suas informações pessoais ao utilizar nosso site e serviços.</p>
 
   <p><strong>Art. 2º</strong> - Coletamos informações de cadastro, como nome e e-mail, bem como dados de uso e informações técnicas, incluindo endereço IP e tipo de navegador.</p>
 
