--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -125,7 +125,7 @@
   <div class="mapa-btn">
     <img src="{{ url_for('static', filename='img/corretor.png') }}" alt="Corretor de Redação" data-link="/redacao">
     <img src="{{ url_for('static', filename='img/conteudos.png') }}" alt="Conteúdos Educacionais" data-link="/feed/artigos">
-    <img src="{{ url_for('static', filename='img/sessoes.png') }}" alt="Sessões de Estudos" data-link="/session">
+    <img src="{{ url_for('static', filename='img/sessoes.png') }}" alt="Sessões de Estudos" data-link="/feed-session">
     
   </div>
 </div>
