--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -120,6 +120,9 @@
 
 <div class="container">
   <h3>Olá, Estudante!</h3>
+
+  <img src="{{ url_for('static', filename='img/ads-3_20250516_112345_0000.png') }}" alt="Redes Sociais">
+     
   <h3>O que você quer fazer agora?</h3>
 
   <div class="mapa-btn">
