correção de erros

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} LearnLoop One {% endblock %}
+{% block title %} Estudaê | Entrar na conta {% endblock %}
 
 {% block content %}
 <div class="container">
